--- a/_config.yml
+++ b/_config.yml
@@ -27,10 +27,11 @@ defaults:
 plugins:
   - jekyll-default-layout
 
-# mermaid:
-#   # Version of mermaid library
-#   # Pick an available version from https://cdn.jsdelivr.net/npm/mermaid/
-#   version: "9.1.3"
+
+mermaid:
+  # Version of mermaid library
+  # Pick an available version from https://cdn.jsdelivr.net/npm/mermaid/
+  version: "10.9.0"
 just_the_docs:
   # Define which collections are used in just-the-docs
   collections:
